add GC and JVM and DBCP